src/angular/planit/src/assets/sass/pages/_marketing.scss
.marketing-hero {
  padding: 0;
  margin: 0 auto;
  position: relative;

  .section-content {
    @media all and (min-width: 41.750em) {
      display: flex;
      flex-direction: column;
      max-width: $marketing-hero-max-width;
    }

    @media all and (min-width: 75.000em) {
      align-items: center;
      flex-direction: row;
      justify-content: space-around;
    }
  }

  .overview {
    flex: auto;
    padding: $space-xlarge;
    margin: 0 auto;
    max-width: 47rem;

    @media all and (min-width: 41.750em) {
      min-width: 35rem;
      width: 47rem;
      max-width: 47rem;
      margin: unset;
      padding: $space-xxlarge;
      background-color: $marketing-background-color;
      z-index: 1;
    }

    @media all and (min-width: 48.250em) {
      align-items: flex-start;
      display: flex;
      flex-direction: column;
    }

    @media all and (min-width: 75.000em) {
      background-color: transparent;
      padding: $space-xxlarge 0;
      justify-content: center;
    }

    @media all and (min-width: 81.250em) {
      padding: $space-xxlarge 0;
    }

    .heading {
      font-size: $marketing-hero-heading-size;
      font-weight: $marketing-hero-heading-weight;

      @media all and (-ms-high-contrast:none) {
        width: 100%;
      }
    }

    .description {
      font-size: $marketing-hero-description-size;
      margin-bottom: $space-xxlarge;
      
      @media all and (-ms-high-contrast:none) {
        width: 100%;
      }
    }

    .button {
      margin-bottom: $space-xlarge;
      min-width: $marketing-hero-button-width;
    }

    .secondary-text {
      font-style: $marketing-hero-secondary-font-style;
    }
  }

  .marketing-hero-image {
    @media all and (min-width: 41.750em) {
      flex: initial;
      background: $marketing-image-background-color url("../images/marketing/city.jpg") no-repeat center;
      background-size: cover;
      min-height: 20rem;
      width: 60%;
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;

      &:after {
        display: none;
      }
    }

    @media all and (min-width: 75.000em) {
      position: relative;
      top: auto;
      right: auto;
      width: 50%;
      height: 80vh;
      max-height: 85rem;
      min-height: 50rem;
      margin-bottom: -8rem;
    }
  }
}

.section-data {
  background: $marketing-dark-background;
  text-align: center;
  padding: 4rem $space-xlarge;

  @media all and (min-width: 48.250em) {
    padding: 8rem $space-xxlarge 16rem;
  }

  @media all and (min-width: 75.000em) {
    padding: 16rem $space-xxlarge;
  }

  .section-content {
    max-width: none;
  }

  .image-container {
    max-width: $marketing-data-section-image-max-width;
    margin: 0 auto;
  }

  .image {
    width: 100%;
  }

  .overview {
    max-width: $marketing-overview-max-width;
    margin: $space-xlarge auto 0;
  }
}

.section-build-plan {
  display: flex;
  justify-content: space-between;
  padding: $space-xlarge;

  @media all and (min-width: 48.250em) {
    padding: 0 $space-xxlarge 8rem;
  }

  .section-content {
    @media all and (min-width: 48.250em) {
      display: flex;
      align-items: center;
      justify-content: space-around;
    }
  }

  .overview {
    margin: 0 auto;
    max-width: $marketing-overview-max-width;

    @media all and (min-width: 48.250em) {
      max-width: $marketing-overview-small-max-width;
      margin: -8rem $space-xxlarge 0 0;
    }

    .image {
      width: 100%;
      margin-bottom: $space-large;
      border: 1px solid $neutral-1;
    }
  }

  .feature-list {
    list-style-type: none;
    padding-left: 0;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    margin: $space-xxlarge auto 0;
    max-width: $marketing-overview-max-width;

    @media all and (min-width: 48.250em) {
      margin-top: 0;
      max-width: none;
      display: block;
    }

    .feature {
      display: flex;
      align-items: center;
      margin: 0 0 $space-xxlarge;

      @media all and (min-width: 48.250em) {
        margin: $space-xxlarge 0;
      }
    }

    .image {
      width: $marketing-feature-image-width;
      height: auto;
      margin-right: $space-large;
    }

    .description {
      max-width: $marketing-feature-description-max-width;
    }
  }
}
app-marketing {
  .section-cta {
    padding: 4rem $space-xlarge;
  }
}

